# Jam

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.py
Config/: Bootstrap.cmake  CMakeLists.txt  Configure.cmake  GitUpdate.cmake
Extras/: README.md
Extras/AppIcon/Win32/: Resource.rc
Extras/BuildTools/ResourceCompiler/: CMakeLists.txt  Main.cpp
Extras/BuildTools/ResourceCompiler/CMake/: ResourceCompiler.cmake
Extras/Design/: EditorIcons.sfd
Extras/OpenGL/: CMakeLists.txt  OpenGL.py  OpenGLHeader.txt  OpenGLSource.txt  OpenGLWrap.py  build.bat
Libraries/Intern/Equation/: CMakeLists.txt  CallState.h  StackValue.cpp  StackValue.h  Stmt.cpp  Stmt.h  StmtParser.cpp  StmtParser.h  StmtScanner.cpp  StmtScanner.h  Symbol.cpp  Symbol.h  Token.cpp  Token.h
Libraries/Intern/Math/: Axis.cpp  Axis.h  Bit.h  Box.cpp  Box.h  CMakeLists.txt  Color.h  ColorF.h  ColorI.h  Domain.h  Edge.cpp  Edge.h  Integer.h  Lg.cpp  Lg.h  Mat4.cpp  Mat4.h  Pair.h  Range.cpp  Range.h  Real.h  Rect.cpp  RectF.h  Screen.cpp  Screen.h  Slice.cpp  Slice.h  Vec2.h  Vec2F.cpp  Vec2F.h  Vec2I.h
Libraries/Intern/Utils/: Array.h  ArrayBase.h  Char.cpp  StreamMethods.h  String.cpp  String.h  Utils.hint
Libraries/Intern/Utils/ParserBase/: ScannerBase.cpp  ScannerBase.h
Libraries/Intern/Xml/: Attribute.h  Declarations.h  File.cpp  File.h  Node.cpp  Node.h  Scanner.cpp  Scanner.h  Token.h  TypeFilter.cpp  TypeFilter.h  Writer.cpp  Writer.h
Source/: CMakeLists.txt  Editor.cpp  Editor.h
Source/Interface/: Application.Dialogs.inl  Application.Events.inl  Application.Menu.inl  Application.Project.inl  Application.Settings.inl  Application.cpp  Application.h  Constants.h  Extensions.cpp  Extensions.h  MainArea.Creator.inl  MainArea.cpp  MainArea.h  PersistentSettings.cpp  PersistentSettings.h  RememberLastCache.cpp  RememberLastCache.h
Source/Interface/Area/: Area.cpp  Area.h  AreaBinaryLayout.cpp  AreaBinaryLayout.h  AreaBinaryLayoutPrivate.cpp  AreaBinaryLayoutPrivate.h  AreaBranch.cpp  AreaBranch.h  AreaContent.cpp  AreaContent.h  AreaContextSwitch.cpp  AreaContextSwitch.h  AreaCreator.h  AreaEdge.cpp  AreaEdge.h  AreaEdgeRect.cpp  AreaEdgeRect.h  AreaLeaf.cpp  AreaLeaf.h  AreaNode.Accessors.inl  AreaNode.Events.inl  AreaNode.Utilities.inl  AreaNode.cpp  AreaNode.h  AreaToolbar.cpp  AreaToolbar.h
Source/Interface/Areas/: AreaType.h  FrameStackArea.cpp  FrameStackArea.h  FrameStackAreaPrivate.cpp  FrameStackAreaPrivate.h  FunctionArea.cpp  FunctionArea.h  FunctionPropertiesPage.cpp  FunctionPropertiesPage.h  GridArea.cpp  GridArea.h  GridPropertiesPage.cpp  GridPropertiesPage.h  OutputArea.cpp  OutputArea.h  ProjectArea.cpp  ProjectArea.h  TodoArea.cpp  TodoArea.h
Source/Interface/Dialogs/: AboutDialog.cpp  AboutDialog.h  Dialog.cpp  Dialog.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialogProjectPage.cpp  SettingsDialogProjectPage.h  SettingsDialogRootPage.cpp  SettingsDialogRootPage.h  SettingsDialogRunPage.cpp  SettingsDialogRunPage.h
Source/Interface/Events/: BranchEvent.h  EventTypes.h  LayerSelectEvent.h  MergeEvent.h  SwitchEvent.h
Source/Interface/Icons/: Icons.md  Icons.qrc  buIld.bat  gen_log.py  gen_md.py  gen_rc.py
Source/Interface/Style/: MainStyle.cpp  MainStyle.h  Palette.cpp  Palette.h  PaletteCache.h  Render.cpp  Render.h
Source/Interface/Widgets/: ContentContainer.cpp  ContentContainer.h  I32Widget.cpp  I32Widget.h  I32WidgetPrivate.cpp  I32WidgetPrivate.h  IconButton.cpp  IconButton.h  OkCancelWidget.cpp  OkCancelWidget.h  StackedPanel.cpp  StackedPanel.h  StackedPanelContent.cpp  StackedPanelContent.h  StackedPanelManager.cpp  StackedPanelManager.h  StringWidget.cpp  StringWidget.h  WindowMenuBar.cpp  WindowMenuBar.h  WindowTitlebar.cpp  WindowTitlebar.h
Source/State/: App.cpp  App.h  FrameStackManager.cpp  FrameStackManager.h  OutputLogMonitor.cpp  OutputLogMonitor.h  ProjectManager.cpp  ProjectManager.h  ProjectTags.h
Source/State/FrameStack/: BaseLayer.cpp  BaseLayer.h  FrameStack.cpp  FrameStack.h  FrameStackSerialize.cpp  FrameStackSerialize.h  FunctionLayer.cpp  FunctionLayer.h  GridLayer.cpp  GridLayer.h  RenderContext.cpp  RenderContext.h
Source/Tests/: CMakeLists.txt  MainAreaTest.cpp  MainAreaTest.h  README.md  WidgetTests.cpp  WidgetTests.h
Source/Utils/: StringConverter.cpp  StringConverter.h  XmlConverter.cpp  XmlConverter.h
Testing/: CMakeLists.txt  Expr.cpp  ExprData.inl  String.cpp
